[project]
name = "electrogis"
version = "0.1.0"
description = "Conversion of GIS data to Power Network Models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Rory Telford", email = "rorydtelford@hotmail.co.uk" }
]
dependencies = [
  "aiohttp>=3.8.4",
  "beautifulsoup4>=4.13.4",
  "pydantic>=2.11.4",
  "requests>=2.30.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers"
testpaths = [
  "electrogis/tests"
]

[tool.black]
line-length = 88
target-version = ["py311"]